--- a/Modpack/BepInEx/config/valheim_plus.cfg
+++ b/Modpack/BepInEx/config/valheim_plus.cfg
@@ -7,7 +7,7 @@ enabled=true
 mainMenuLogo=true
 
 ; Display the advertisement of our server hosting partner on the server browser menu
-serverBrowserAdvertisement=true
+serverBrowserAdvertisement=false
 
 ; Disables configuration file auto updates from GitHub, useful if GitHub is blocked on your network.
 disableConfigAutoUpdates=false
@@ -16,7 +16,7 @@ disableConfigAutoUpdates=false
 
 ; https://docs.unity3d.com/ScriptReference/KeyCode.html <- a list of keycodes
 ; Change false to true to enable this section, if you set this to false the mode will not be accessible.
-enabled=false
+enabled=true
 
 ; Enter the advanced building mode with this key when building
 enterAdvancedBuildingMode=F1
@@ -40,7 +40,7 @@ decreaseScrollSpeed=KeypadMinus
 
 ; https://docs.unity3d.com/ScriptReference/KeyCode.html <- a list of keycodes
 ; Change false to true to enable this section, if you set this to false the mode will not be accessible.
-enabled=false
+enabled=true
 
 ; Enter the advanced editing mode with this key
 enterAdvancedEditingMode=Keypad0
@@ -174,13 +174,13 @@ polearms=0
 spears=0
 
 ; The modifier value for the experience gained of blocking.
-blocking=0
+blocking=50
 
 ; The modifier value for the experience gained of axes.
 axes=0
 
 ; The modifier value for the experience gained of bows.
-bows=0
+bows=50
 
 ; The modifier value for the experience gained of elemental magic.
 elementalMagic=0
@@ -189,7 +189,7 @@ elementalMagic=0
 bloodMagic=0
 
 ; The modifier value for the experience gained of unarmed.
-unarmed=0
+unarmed=25
 
 ; The modifier value for the experience gained of mining.
 pickaxes=0
@@ -210,7 +210,7 @@ sneak=0
 run=0
 
 ; The modifier value for the experience gained of swimming.
-swim=0
+swim=50
 
 ; The modifier value for the experience gained of fishing.
 fishing=0
@@ -281,19 +281,19 @@ autoRange=10
 [Food]
 
 ; Change false to true to enable this section.
-enabled=false
+enabled=true
 
 ; Increase or reduce the time that food lasts by %.
 ; The value 50 would cause food to run out 50% slower, -50% would cause the food to run out 50% faster.
 foodDurationMultiplier=0
 
 ; This option prevents food degrading over time - in other words, it retains its maximum benefit until it runs out instead of reducing its effect over time.
-disableFoodDegradation=false
+disableFoodDegradation=true
 
 [Smelter]
 
 ; Change false to true to enable this section.
-enabled=false
+enabled=true
 
 ; Maximum amount of ore in a Smelter.
 maximumOre=10
@@ -308,7 +308,7 @@ coalUsedPerProduct=2
 productionSpeed=30
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The Smelter will pull coal and raw materials from nearby chests to be automatically added to it when its empty.
 autoFuel=false
@@ -319,12 +319,12 @@ ignorePrivateAreaCheck=true
 
 ; The range of the chest detection for the auto deposit and auto fuel features.
 ; Maximum is 50
-autoRange=10
+autoRange=30
 
 [Furnace]
 
 ; Change false to true to enable this section.
-enabled=false
+enabled=true
 
 ; Maximum amount of ore in a Furnace.
 maximumOre=10
@@ -339,7 +339,7 @@ coalUsedPerProduct=2
 productionSpeed=30
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The Furnace will pull coal and raw materials from nearby chests to be automatically added to it when its empty.
 autoFuel=false
@@ -350,7 +350,7 @@ ignorePrivateAreaCheck=true
 
 ; The range of the chest detection for the auto deposit and auto fuel features.
 ; Maximum is 50
-autoRange=10
+autoRange=30
 
 ; This option allows all ores inside the Furnace.
 allowAllOres=false
@@ -406,7 +406,7 @@ rollBackwards=F10
 [Items]
 
 ; Change false to true to enable this section.
-enabled=false
+enabled=true
 
 ; Enables you to teleport with ores and other usually teleport restricted objects.
 noTeleportPrevention=false
@@ -424,25 +424,25 @@ itemStackMultiplier=0
 droppedItemOnGroundDurationInSeconds=3600
 
 ; Items dropped always float in water.
-itemsFloatInWater=false
+itemsFloatInWater=true
 
 [Hud]
 
 ; Change false to true to enable this section.
-enabled=false
+enabled=true
 
 ; Shows the required amount of items AND the amount of items in your inventory in build mode and while crafting.
 ; This is enabled when the CraftFromChest section is enabled.
-showRequiredItems=false
+showRequiredItems=true
 
 ; Shows small notifications about all skill experienced gained in the top left corner.
-experienceGainedNotifications=false
+experienceGainedNotifications=true
 
 ; Set to true to remove the red screen flash overlay when the player takes damage.
 removeDamageFlash=false
 
 ; If bow is in hotbar, display current ammo & total ammo under hotbar icon - never (0), when equipped (1), or always (2).
-displayBowAmmoCounts=0
+displayBowAmmoCounts=1
 
 [Gathering]
 
@@ -541,7 +541,7 @@ capes=0
 [Kiln]
 
 ; Change false to true to enable this section.
-enabled=false
+enabled=true
 
 ; Maximum amount of wood in a Kiln.
 maximumWood=25
@@ -556,7 +556,7 @@ dontProcessRoundLog=false
 productionSpeed=15
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The Kiln will pull wood from nearby chests to be automatically added to it when its empty.
 ; This option respects the dontProcessFineWood and dontProcessRoundLog settings.
@@ -572,33 +572,33 @@ ignorePrivateAreaCheck=true
 
 ; The range of the chest detection for the auto deposit and fuel features.
 ; Maximum is 50
-autoRange=10
+autoRange=30
 
 [Map]
 
 ; Change false to true to enable this section.
-enabled=false
+enabled=true
 
 ; With this enabled you will receive the same exploration progression as other players on the server.
 ; This will also enable the option for the server to sync everyones exploration progression on connecting to the server.
-shareMapProgression=false
+shareMapProgression=true
 
 ; The radius of the map that you explore when moving.
 exploreRadius=100
 
 ; Prevents you and other people on the server to turn off their map sharing option.
-preventPlayerFromTurningOffPublicPosition=false
+preventPlayerFromTurningOffPublicPosition=true
 
 ; This option automatically shares created pins with everyone playing on the server.
-shareAllPins=false
+shareAllPins=true
 
 ; Display carts and boats on the map
-displayCartsAndBoats=false
+displayCartsAndBoats=true
 
 [Player]
 
 ; Change false to true to enable this section.
-enabled=false
+enabled=true
 
 ; The base amount of carry weight of your character.
 baseMaximumWeight=300
@@ -619,14 +619,14 @@ baseUnarmedDamage=70
 cropNotifier=false
 
 ; How many seconds each comfort level contributes to the rested bonus.
-restSecondsPerComfortLevel=60
+restSecondsPerComfortLevel=15
 
 ; Change the death penalty in percentage, where higher will increase the death penalty and lower will reduce it.
 ; This is a modifier value. 50 will increase it by 50%, -50 will reduce it by 50%.
 deathPenaltyMultiplier=0
 
 ; If set to true, this option will automatically repair your equipment when you interact with the appropriate workbench.
-autoRepair=false
+autoRepair=true
 
 ; Boss buff duration (seconds)
 guardianBuffDuration=300
@@ -657,7 +657,7 @@ iHaveArrivedOnSpawn=true
 dontUnequipItemsWhenSwimming=false
 
 ; If set to true, items will be re-equipped when you exit water after swimming (if they were hidden automatically)
-reequipItemsAfterSwimming=false
+reequipItemsAfterSwimming=true
 
 ; This value represents how much the fall damage should be scaled in +/- %. This is a modifier value.
 ; The value 50 would result in 50% increased fall damage. The value -50 would result in 50% reduced fall damage.
@@ -738,7 +738,7 @@ swimStaminaDrain=0
 
 ; Change false to true to enable this section. This section contains modifiers.
 ; Modifiers are increases and reduction in percent declared by 50, or -50.
-enabled=false
+enabled=true
 
 ; Each of these values change the respective tool in stamina usage by increases and reduction in percent declared by 50, or -50.
 axes=0
@@ -751,9 +751,9 @@ polearms=0
 spears=0
 swords=0
 unarmed=0
-hammer=0
-hoe=0
-cultivator=0
+hammer=-50
+hoe=-50
+cultivator=-50
 fishing=0
 
 [EitrUsage]
@@ -822,7 +822,7 @@ wardEnemySpawnRange=0
 
 [Workbench]
 ; Change false to true to enable this section.
-enabled=false
+enabled=true
 
 ; Set the workbench radius in meters.
 workbenchRange=20
@@ -832,7 +832,7 @@ workbenchRange=20
 workbenchEnemySpawnRange=0
 
 ; Sets the workbench attachment (e.g. anvil) radius.
-workbenchAttachmentRange=5
+workbenchAttachmentRange=10
 
 ; Disables the roof and exposure requirement to use a workbench.
 disableRoofCheck=false
@@ -1064,7 +1064,7 @@ autoRange=10
 [EitrRefinery]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; Maximum amount of sap in an Eitr Refinery.
 maximumSap = 20
@@ -1087,7 +1087,7 @@ ignorePrivateAreaCheck = true
 
 ; The range of the chest detection for the auto deposit and auto fuel features.
 ; Maximum is 50
-autoRange = 10
+autoRange = 30
 
 
 [PlayerProjectile]
@@ -1145,13 +1145,13 @@ stunInformation=false
 [GameClock]
 
 ; Change false to true to enable this section.
-enabled=false
+enabled=true
 
 ; Change time formatting from 24hr to AM-PM.
-useAMPM=false
+useAMPM=true
 
 ; Change font size of time text.
-textFontSize=34
+textFontSize=24
 
 ; Change how red the time text is (51/255).
 textRedChannel=248
