added mod groups

--- a/Modpack/BepInEx/config/WackyMole.EpicMMOSystem.cfg
+++ b/Modpack/BepInEx/config/WackyMole.EpicMMOSystem.cfg
@@ -88,12 +88,12 @@ BonusLevelPoints = 5:5,10:5
 ## The range at which people in a group (Group MOD ONLY) get XP, relative to player who killed mob - only works if the killer gets xp. - Default 70f, a large number like 999999999999f, will probably cover map [Synced with Server]
 # Setting type: Single
 # Default value: 70
-Group EXP Range = 150
+Group EXP Range = 70
 
 ## The range at which a player gets XP [Synced with Server]
 # Setting type: Single
 # Default value: 70
-Player EXP Range = 150
+Player EXP Range = 70
 
 ## Your tames give players in range XP [Synced with Server]
 # Setting type: Boolean
@@ -532,22 +532,22 @@ Disable Destructables XP = false
 ##  Use @, to display player Level next to name. Blank for nothing. [Synced with Server]
 # Setting type: String
 # Default value: (Lvl<color=blue> @ </color>) 
-Display Player Level = (Lvl<color=blue> @ </color>)
+Display Player Level = (Lvl<color=red> @ </color>) 
 
 ## Use @, to display the current XP a player is worth next to name. Blank for nothing. [Synced with Server]
 # Setting type: String
 # Default value:  [@ XP]
-Display Players XP Worth = [@ XP]
+Display Players XP Worth =
 
 ## Use @, to display the how long the player has been alive in days. Blank for nothing. [Synced with Server]
 # Setting type: String
 # Default value:  <color=red>(@ Days Alive)</color>
-Display Days Alive = <color=red>(@ Days Alive)</color>
+Display Days Alive =  
 
 ## Enable PVP XP, victor gets XP of fallen player. [Synced with Server]
 # Setting type: Boolean
 # Default value: true
-Enable PVP XP = true
+Enable PVP XP = false
 
 ## How much XP is a player worth on defeat by another player per level. [Synced with Server]
 # Setting type: Int32
