QOL config changes

--- a/Modpack/BepInEx/config/valheim_plus.cfg
+++ b/Modpack/BepInEx/config/valheim_plus.cfg
@@ -82,7 +82,7 @@ unclaimedBedsOnly=false
 [Beehive]
 
 ; Change false to true to enable this section.
-enabled=false
+enabled=true
 
 ; Configure the speed at which the bees produce honey in seconds, 1200 seconds are 24 ingame hours.
 honeyProductionSpeed=1200
@@ -91,11 +91,11 @@ honeyProductionSpeed=1200
 maximumHoneyPerBeehive=4
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The range of the chest detection for the auto deposit feature.
 ; Maximum is 50
-autoDepositRange=10
+autoDepositRange=50
 
 ; Display the minutes and seconds until the beehive produces honey on crosshair hover.
 showDuration=false
@@ -156,7 +156,7 @@ cameraFOV=65
 
 ; Change false to true to enable this section. This section contains modifiers.
 ; Modifiers are increases and reduction in percent declared by 50, or -50. The value 50 will increase experience gained by 50%, -50 will reduce experience gained by 50%.
-enabled=false
+enabled=true
 
 ; The modifier value for the experience gained of swords.
 swords=0
@@ -230,7 +230,7 @@ ride=0
 [Fermenter]
 
 ; Change false to true to enable this section.
-enabled=false
+enabled=true
 
 ; Configure the time that the fermenter takes to produce its product, 2400 seconds are 48 ingame hours.
 fermenterDuration=2400
@@ -242,7 +242,7 @@ fermenterItemsProduced=6
 showDuration=false
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; Automatically pull meads from nearby chests to be placed inside the Fermenter as soon as its empty.
 autoFuel=false
@@ -395,13 +395,13 @@ disableFog=false
 
 ; https://docs.unity3d.com/ScriptReference/KeyCode.html <- a list of keycodes
 ; Change false to true to enable this section.
-enabled=false
+enabled=true
 
 ; Roll forwards on hot key pressed.
-rollForwards=F9
+rollForwards=Mouse4
 
 ; Roll backwards on hot key pressed.
-rollBackwards=F10
+rollBackwards=Mouse2 ; this is middle mouse button
 
 [Items]
 
@@ -619,7 +619,7 @@ baseUnarmedDamage=70
 cropNotifier=false
 
 ; How many seconds each comfort level contributes to the rested bonus.
-restSecondsPerComfortLevel=15
+restSecondsPerComfortLevel=60 ; 60 is default vanilla
 
 ; Change the death penalty in percentage, where higher will increase the death penalty and lower will reduce it.
 ; This is a modifier value. 50 will increase it by 50%, -50 will reduce it by 50%.
@@ -639,13 +639,13 @@ disableGuardianBuffAnimation=false
 
 ; If set to true, when equipping a one-handed weapon, the best shield from your inventory is automatically equipped.
 ; (Best is determined by highest block power)
-autoEquipShield=false
+autoEquipShield=true
 
 ; When unequipping a one-handed weapon also unequip shield from inventory.
-autoUnequipShield=false
+autoUnequipShield=true
 
 ; If set to true, weapon switches requested mid-attack will be carried out when the current attack is finished instead of being ignored.
-queueWeaponChanges=false
+queueWeaponChanges=true
 
 ; If set to true, you will always skip the intro of the game.
 skipIntro=false
@@ -825,7 +825,7 @@ wardEnemySpawnRange=0
 enabled=true
 
 ; Set the workbench radius in meters.
-workbenchRange=20
+workbenchRange=40
 
 ; Set the enemy spawn radius around workbenches in meters
 ; This value equals workbenchRange if its set to 0.
@@ -983,7 +983,7 @@ changeDefaultAlignment=F6
 
 ; Change false to true to enable this section.
 ; This feature allows you to craft from nearby chests when in range.
-enabled=false
+enabled=true
 
 ; Change false to true to disable this feature when using a Cooking Station.
 disableCookingStation=false
@@ -995,7 +995,7 @@ checkFromWorkbench=true
 ignorePrivateAreaCheck=false
 
 ; The range of the chest detection in meters.
-range=20
+range=40
 
 ; The interval in seconds that the feature scans your nearby chests.
 ; We recommend not going below 3 seconds.
@@ -1010,7 +1010,7 @@ allowCraftingFromShips=false
 [Windmill]
 
 ; Change false to true to enable this section.
-enabled=false
+enabled=true
 
 ; Maximum amount of barley in a windmill.
 maximumBarley=50
@@ -1022,7 +1022,7 @@ productionSpeed=10
 ignoreWindIntensity=false
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The Windmill will pull barley from nearby chests to be automatically added to it when its empty.
 autoFuel=false
@@ -1033,12 +1033,12 @@ ignorePrivateAreaCheck=true
 
 ; The range of the chest detection for the auto deposit and auto fuel features.
 ; Maximum is 50
-autoRange=10
+autoRange=50
 
 [SpinningWheel]
 
 ; Change false to true to enable this section.
-enabled=false
+enabled=true
 
 ; Maximum amount of flax in a spinning wheel.
 maximumFlax=50
@@ -1047,7 +1047,7 @@ maximumFlax=50
 productionSpeed=30
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The Spinning Wheel will pull flax from nearby chests to be automatically added to it when its empty.
 autoFuel=false
@@ -1058,7 +1058,7 @@ ignorePrivateAreaCheck=true
 
 ; The range of the chest detection for the auto deposit and auto fuel features
 ; Maximum is 50
-autoRange=10
+autoRange=50
 
 
 [EitrRefinery]
