--- a/Modpack/BepInEx/config/valheim_plus.cfg
+++ b/Modpack/BepInEx/config/valheim_plus.cfg
@@ -319,7 +319,7 @@ ignorePrivateAreaCheck=true
 
 ; The range of the chest detection for the auto deposit and auto fuel features.
 ; Maximum is 50
-autoRange=30
+autoRange=50
 
 [Furnace]
 
@@ -572,7 +572,7 @@ ignorePrivateAreaCheck=true
 
 ; The range of the chest detection for the auto deposit and fuel features.
 ; Maximum is 50
-autoRange=30
+autoRange=50
 
 [Map]
 
@@ -1087,7 +1087,7 @@ ignorePrivateAreaCheck = true
 
 ; The range of the chest detection for the auto deposit and auto fuel features.
 ; Maximum is 50
-autoRange = 30
+autoRange = 50
 
 
 [PlayerProjectile]
@@ -1358,11 +1358,11 @@ sapProductionSpeed=60
 maximumSapPerCollector=10
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The range of the chest detection for the auto deposit feature.
 ; Maximum is 50
-autoDepositRange=10
+autoDepositRange=50
 
 ; Display the time until the collector produces sap, on hover.
 showDuration=false
