update plantEverything config

--- a/Modpack/BepInEx/config/advize.PlantEverything.cfg
+++ b/Modpack/BepInEx/config/advize.PlantEverything.cfg
@@ -272,7 +272,7 @@ EnforceBiomes = false
 ## Restrict vanilla plantables (crops and saplings) to being placed in their respective biome.
 # Setting type: Boolean
 # Default value: true
-EnforceBiomesVanilla = true
+EnforceBiomesVanilla = false
 
 ## Controls whether plants need shielding to survive in hostile environments.
 # Setting type: Boolean
@@ -287,7 +287,7 @@ CanRemoveFlora = false
 ## Recover resources when pickables are removed with the cultivator. Applies to berries, mushrooms, and flowers.
 # Setting type: Boolean
 # Default value: false
-RecoverResources = false
+RecoverResources = true
 
 ## Specifies whether resources should spawn empty or full. Applies to berry bushes, mushrooms, flowers, and debris.
 # Setting type: Boolean
