--- a/Modpack/BepInEx/config/Azumatt.AzuAutoStore.cfg
+++ b/Modpack/BepInEx/config/Azumatt.AzuAutoStore.cfg
@@ -31,7 +31,7 @@ Must Have Existing Item To Pull = On
 # Setting type: Single
 # Default value: 5
 # Acceptable value range: From 1 to 100
-Player Range = 5
+Player Range = 100
 
 ## The range to use if the container has no range set in the yml file. This will be the fallback range for all containers. [Synced with Server]
 # Setting type: Single
@@ -48,7 +48,7 @@ Player Ignore Hotbar = On
 # Setting type: Toggle
 # Default value: Off
 # Acceptable values: Off, On
-Player Ignore Quick Slots = Off
+Player Ignore Quick Slots = On
 
 ## The VFX to play when a chest is pinged. Leave blank to disable and only highlight the chest. (Full prefab list: https://valheim-modding.github.io/Jotunn/data/prefabs/prefab-list.html) [Synced with Server]
 # Setting type: String
@@ -125,12 +125,12 @@ DisplayTooltipHint = true
 ## While holding this, left clicking on items or right clicking on slots favorites them, disallowing storing Identical to FavoritingModifierKeybind2. [Not Synced with Server]
 # Setting type: KeyboardShortcut
 # Default value: Z
-FavoritingModifierKeybind1 = Z
+FavoritingModifierKeybind1 = P
 
 ## While holding this, left clicking on items or right clicking on slots favorites them, disallowing storing Identical to FavoritingModifierKeybind1. [Not Synced with Server]
 # Setting type: KeyboardShortcut
 # Default value: Z
-FavoritingModifierKeybind2 = Z
+FavoritingModifierKeybind2 = P
 
 ##  [Not Synced with Server]
 # Setting type: String
