--- a/Modpack/BepInEx/config/valheim_plus.cfg
+++ b/Modpack/BepInEx/config/valheim_plus.cfg
@@ -1236,16 +1236,16 @@ wispSpawnChanceMultiplier = 0
 [Demister]
 
 ; Change false to true to enable this section.
-enabled = false
+enabled = true
 
 ; This value determines the range of Wisp Light demister field.
-wispLight = 10
+wispLight = 100
 
 ; This value determines the range of Wisp Torch demister field.
-wispTorch = 12
+wispTorch = 120
 
 ; This value determines the range of Mistwalker demister field.
-mistwalker = 5
+mistwalker = 50
 
 [HotTub]
 
